--- a/index.html
+++ b/index.html
@@ -3,11 +3,37 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
+	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<title>Supari Studios</title>
 </head>
 <body>
+	<div class="row-fluid" id="topBar"></div>
+	<div class="container">
+		<div class="row-fluid">
+			<div class="span4">
+				<a href="#"><img class="circles" src="img/grenade.png"></a>
+			</div>
+			<div class="span4 offset4">
+				<a href="#"><img class="circles pull-right" src="img/grenade.png"></a>
+			</div>
+		</div>
+		<div class="row-fluid" id="entryVidContainer">
+			<div id="entryVid">		
+				
+			</div>
+		</div>
+		<div class="row-fluid">
+			<div class="span4">
+				<a href="#"><img class="circles" src="img/grenade.png"></a>
+			</div>
+			<div class="span4 offset4">
+				<a href="#"><img class="circles pull-right" src="img/grenade.png"></a>
+			</div>
+		</div>
+	</div>
 
 	<script type="text/javascript" src="js/jquery-1.10.2.js"></script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
+	<script type="text/javascript" src="js/custom.js"></script>
 </body>
 </html>
