Added Animate Transform

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Supari Studios</title>
 </head>
 <body>
-	<div class="row-fluid" id="topBar"></div>
+	<div class="row-fluid topBar" ></div>
 	<div class="container">
 		<div class="row-fluid">
 			<div class="span4">
