--- a/index.html
+++ b/index.html
@@ -7,30 +7,34 @@
 	<title>Supari Studios</title>
 </head>
 <body>
-	<div class="row-fluid topBar" ></div>
-	<div class="container">
-		<div class="row-fluid">
-			<div class="span4">
-				<a href="#"><img class="circles" src="img/grenade.png"></a>
-			</div>
-			<div class="span4 offset4">
-				<a href="#"><img class="circles pull-right" src="img/grenade.png"></a>
-			</div>
-		</div>
-		<div class="row-fluid" id="entryVidContainer">
-			<div id="entryVid">		
-				
-			</div>
-		</div>
-		<div class="row-fluid">
-			<div class="span4">
-				<a href="#"><img class="circles" src="img/grenade.png"></a>
-			</div>
-			<div class="span4 offset4">
-				<a href="#"><img class="circles pull-right" src="img/grenade.png"></a>
-			</div>
-		</div>
-	</div>
+	<div class="row-fluid">
+		<div class="nav-collapse">
+        	<ul class="nav nav-pills pull-right">
+            	<li><a href=""><i class="icon-home icon-2x"></i> Home<br></a>
+            	</li>
+            	<li><a href=""><i class=" icon-pencil icon-2x"></i>About Us</a>
+            	</li>
+            	<li><a href=""><i class=" icon-briefcase icon-2x"></i>Portfolio</a>
+            	</li>
+            	<li><a href=""><i class=" icon-envelope icon-2x"></i>Contact Us</a>
+            	</li>
+        	</ul>
+     	</div>
+ 	</div>
+
+ 	<div class="workContainer">
+ 		<div class="row-fluid"></div>
+ 		<div class="item offset1"></div>
+ 		<div class="item offset1"></div>
+ 		<div class="item offset1"></div>
+ 		<div class="item offset1"></div>
+ 		<div class="item offset1"></div>
+ 		<div class="item offset1"></div>
+ 		<div class="item offset1"></div>
+ 		<div class="item offset1"></div>
+
+ 		<div class="row-fluid"></div>
+ 	</div>
 
 	<script type="text/javascript" src="js/jquery-1.10.2.js"></script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
