Fixed the GoLeft and GoRight buttons

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<title>Supari Studios</title>
 </head>
-<!--<body style="overflow-x: hidden">-->
-<body>
+<body style="overflow-x: hidden">
+
 	<div class="row-fluid">
 		<div class="nav-collapse">
         	<ul class="nav nav-pills pull-right">
@@ -100,6 +100,11 @@
         <div id="member1">Number1</div>
         <div id="member2">Number1</div>
         <div id="member3">Number1</div>
+
+    </div>
+
+    <div class="row-fluid" id="footer">
+        <div></div>
 
     </div>
 
