--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<title>Supari Studios</title>
 </head>
-<body style="overflow-x: hidden">
-
+<!--<body style="overflow-x: hidden">-->
+<body>
 	<div class="row-fluid">
 		<div class="nav-collapse">
         	<ul class="nav nav-pills pull-right">
@@ -104,7 +104,9 @@
     </div>
 
     <div class="row-fluid" id="footer">
-        <div></div>
+       <div id="evelopeFront"></div>
+        <div id="evelopeBack"></div>
+        <div id="letter"></div>
 
     </div>
 
