--- a/index.html
+++ b/index.html
@@ -108,6 +108,29 @@
         <div id="evelopeBack"></div>
         <div id="letter"></div>
 
+        <div class="span3" id="social">
+            
+        </div>
+
+    </div>
+
+    <div id="map">
+        <div class="span3 pull-right" id="address">
+            <div id="addContainer">
+                <address>
+                    <strong>Supari Studio</strong><br>
+                    B/204, Anand Society,<br>
+                    Juhu Lane, Andheri West<br>
+                    Mumbai 400-016<br>
+                    <abbr title="Phone">P:</abbr> (123) 456-7890
+                </address>
+ 
+                <address>
+                    <strong>Full Name</strong><br>
+                    <a href="mailto:#">first.last@example.com</a>
+                </address>
+            </div>
+        </div>
     </div>
 
 
