--- a/index.html
+++ b/index.html
@@ -103,17 +103,7 @@
 
     </div>
 
-    <div class="row-fluid" id="footer">
-       <div id="evelopeFront"></div>
-        <div id="evelopeBack"></div>
-        <div id="letter"></div>
-
-        <div class="span3" id="social">
-            
-        </div>
-
-    </div>
-
+    
     <div id="map">
         <div class="span3 pull-right" id="address">
             <div id="addContainer">
@@ -131,6 +121,18 @@
                 </address>
             </div>
         </div>
+    </div>
+
+    <div class="row-fluid" id="footer">
+        <div class="span3" id="evelope">
+            <img id="evelopeOpen" src="img/evelopeOpen.png">
+            <img id="evelopeTop" src="img/evelopeTop.png">
+        </div>
+
+        <div class="span3" id="social">
+
+        </div>
+
     </div>
 
 
