--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     </div>
 
-    
+    <!--
     <div id="map">
         <div class="span3 pull-right" id="address">
             <div id="addContainer">
@@ -134,6 +134,33 @@
         </div>
 
     </div>
+
+    -->
+
+    <div class="row-fluid" id="footer">
+        <div id="evelopeContainer">
+            <img id="envelopeBackImg" src="img/envelope/envelopeBack.png">
+        </div>
+        <div class="flap">
+            <div class="flapOpen">
+                <img class="flapOpenImg" src="img/envelope/flapBack.png">
+            </div>
+            <div class="flapClose">
+                <img class="flapCloseImg" src="img/envelope/flapFront.png">
+            </div>
+        </div> 
+
+        <div class="social">
+            <span title="Facebook"><a class="social" id="facebook"  href="https://www.facebook.com/cliffton" target="_blank"></a></span><br>
+            <span title="Google+"><a class="social" id="googleplus" href="https://plus.google.com/u/0/111716524382057069927" target="_blank"></a></span><br>
+            <span title="LinkedIn"><a class="social" id="linkedin" href="http://www.linkedin.com/profile/view?id=91104783" target="_blank"></a></span><br>
+        </div>
+
+    </div>
+
+
+
+    
 
 
 	<script type="text/javascript" src="js/jquery-1.10.2.js"></script>
